7.jul (ws)
      - squared longa and brevis (patch from miwarre)
      - fix image offsets (patch from miwarre)
      - fix multimeasure rest number position
5.jul (ws)
      - fix #11386: Quitting MuseScore causes crash
      - fix #10709: Unable to change TAB clef
4.jul (ws)
      - fixes for chorus parameter handling
      - restrict augmentation dot alignment to staff (instead of system)
3.jul (ws)
      - fixed subbeam logic
2.jul (ws)
      - fix #10585: Accidental offset in small staves corrupted by saving and reloading
      - fix #11035: Wrong position of (some) note dots (patch from Miwarre)
27.jun (ws)
      - fix: do not remove clefs from template in new wizard "create from template"
      - fix: don't allow piano shortcut in edit mode (so you can enter 'p' in text)
25.jun (la)
      - better handling of Tab key in text element
      - add permanent cookie support in MuseScore Connect, prepare translation
24.jun (ws)
      - added experimental sampler msynth2
      - ongoing work on libmscore
      (la)
      - fix #11246: change default number of measures and pickup measure timesig
14.jun (ws)
      - more work on libmscore: the element context menus are back
        (there is still some functionality commented out)
      (la)
      - enhance plugin framework : chord.small, chord.noStem, rest.small, note.velocity, score.keysig
12.jun (ws)
      - work in progress: moving gui independent code into libmscore
11.jun (ws)
      - fix corruption of segmentList (loading of guitar pro files crashed)
      - created "libmscore" which will contain gui independent code
       (la)
      - fix #11019: new files: jazz templates, demo & chord styles by Marc Sabatella
9.jun (ws)
      - fixed regression for "hide empty staves"
      - fixed start repeat barline
7.jun (ws)
      - "x" (flip) flips the up/down position of a note augmentation dot
        (if note y position is on a staff line)
      - align augmentation dots vertically also for different voices